--- a/src/main/webapp/app/account/password-reset/init/password-reset-init.css
+++ b/src/main/webapp/app/account/password-reset/init/password-reset-init.css
@@ -33,11 +33,12 @@ label{
     font-style: italic!important;
     font-size: 14px!important;
     margin-left:16%!important;
+    width: 86%!important;
 }
 
 h1{
     color:white!important;
-    margin-left:38%!important;
+    margin-left:44%!important;
 
 
 }
@@ -50,6 +51,7 @@ h1{
 @media (max-width: 700px) {
     .form-control{
         margin-left: 50px!important;
+        width: 102%!important;
     }
 
 }
@@ -57,6 +59,10 @@ h1{
 @media (max-width: 600px) {
     .form-control{
         margin-left: 50px!important;
+    }
+    .boton2{
+        margin-left: 46%!important;
+
     }
 
 }
