--- a/src/main/webapp/app/pages/pagehome/phome.component.html
+++ b/src/main/webapp/app/pages/pagehome/phome.component.html
@@ -2,112 +2,112 @@
     <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('alemania')">
         <div class="overlayInfo">
             <div class="nombre">
-                <a>ALEMANIA</a>
+                <a class="hijo">ALEMANIA</a>
             </div>
         </div>
     </div>
     <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('argentina')">
         <div class="overlayInfo">
-            <div  class="nombre">
-                <a>ARGENTINA</a>
+            <div class="nombre">
+                <a class="hijo">ARGENTINA</a>
             </div>
         </div>
     </div>
     <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('belgica')">
         <div class="overlayInfo">
             <div class="nombre">
-                <a>Belgica</a>
+                <a class="hijo">Belgica</a>
             </div>
         </div>
     </div>
     <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('brasil')">
         <div class="overlayInfo">
             <div class="nombre">
-                <a>BRASIL</a>
+                <a class="hijo">BRASIL</a>
             </div>
         </div>
     </div>
     <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('colombia')">
         <div class="overlayInfo">
             <div class="nombre">
-                <a>COLOMBIA</a>
+                <a class="hijo">COLOMBIA</a>
             </div>
         </div>
     </div>
     <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('eeuu')">
         <div class="overlayInfo">
             <div class="nombre">
-                <a>ESTADOS UNIDOS</a>
+                <a class="hijo">ESTADOS UNIDOS</a>
             </div>
         </div>
     </div>
     <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('espana')">
         <div class="overlayInfo">
             <div class="nombre">
-                <a>ESPAÑA</a>
+                <a class="hijo">ESPAÑA</a>
             </div>
         </div>
     </div>
     <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('francia')">
         <div class="overlayInfo">
             <div class="nombre">
-                <a>FRANCIA</a>
+                <a class="hijo">FRANCIA</a>
             </div>
         </div>
     </div>
     <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('grecia')">
         <div class="overlayInfo">
             <div class="nombre">
-                <a>GRECIA</a>
+                <a class="hijo">GRECIA</a>
             </div>
         </div>
     </div>
     <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('holanda')">
         <div class="overlayInfo">
             <div class="nombre">
-                <a>HOLANDA</a>
+                <a class="hijo">HOLANDA</a>
             </div>
         </div>
     </div>
     <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('italia')">
         <div class="overlayInfo">
             <div class="nombre">
-                <a>ITALIA</a>
+                <a class="hijo">ITALIA</a>
             </div>
         </div>
     </div>
     <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('mexico')">
         <div class="overlayInfo">
             <div class="nombre">
-                <a>MEXICO</a>
+                <a class="hijo">MEXICO</a>
             </div>
         </div>
     </div>
     <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('portugal')">
         <div class="overlayInfo">
             <div class="nombre">
-                <a>PORTUGAL</a>
+                <a class="hijo">PORTUGAL</a>
             </div>
         </div>
     </div>
     <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('reino_unido')">
         <div class="overlayInfo">
             <div class="nombre">
-                <a>REINO UNIDO</a>
+                <a class="hijo">REINO UNIDO</a>
             </div>
         </div>
     </div>
     <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('suecia')">
         <div class="overlayInfo">
             <div class="nombre">
-                <a>SUECIA</a>
+                <a class="hijo">SUECIA</a>
             </div>
         </div>
     </div>
     <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('suiza')">
         <div class="overlayInfo">
             <div class="nombre">
-                <a>SUIZA</a>
+                <a class="hijo">SUIZA</a>
             </div>
         </div>
     </div>
