--- a/src/main/webapp/app/pages/pagehome/phome.css
+++ b/src/main/webapp/app/pages/pagehome/phome.css
@@ -4,7 +4,7 @@
 
 .fondo{
     background-size: cover;
-    background: linear-gradient(#020d1c,#020d1c);
+    background: black!important;
     float:right!important;
     width:90%!important;
 
@@ -72,7 +72,7 @@ h1{
 }
 .audio{
     align-content: center;
-    margin-top: 2%;
+    margin-top: 8%;
     width: 100%;
 }
 
@@ -94,8 +94,13 @@ h1{
     height: 100%;
     width: 100%;
     opacity: 0;
-    transition: .5s ease;
+    transition: 0.5s ease;
     background-color: #f5f5f5;
+    text-align: center;
+}
+
+.hijo{
+    line-height: 260px!important;
 }
 .cover img{
     cursor: pointer;
@@ -118,7 +123,7 @@ h1{
 
 .botonyoutube{
     margin-top: 15%;
-    margin-left: 32%;
+    margin-left: 3%;
     background-color: red;
     border-color: white;
     border-radius: 4px;
