--- a/src/main/webapp/app/pages/pagehome/phome.component.html
+++ b/src/main/webapp/app/pages/pagehome/phome.component.html
@@ -1,113 +1,115 @@
-<div class="picture-grid">
-    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('alemania')">
-        <div class="overlayInfo">
-            <div class="nombre">
-                <a class="hijo">ALEMANIA</a>
+<div [ngStyle]="{'display':displayCountry}">
+    <div class="picture-grid">
+        <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('alemania')">
+            <div class="overlayInfo" (click)="topSong('DE')">
+                <div class="nombre">
+                    <a class="hijo">ALEMANIA</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('argentina')">
-        <div class="overlayInfo">
-            <div class="nombre">
-                <a class="hijo">ARGENTINA</a>
+        <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('argentina')">
+            <div class="overlayInfo" (click)="topSong('AR')">
+                <div class="nombre">
+                    <a class="hijo">ARGENTINA</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('belgica')">
-        <div class="overlayInfo">
-            <div class="nombre">
-                <a class="hijo">Belgica</a>
+        <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('belgica')">
+            <div class="overlayInfo" (click)="topSong('BE')">
+                <div class="nombre">
+                    <a class="hijo">BELGICA</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('brasil')">
-        <div class="overlayInfo">
-            <div class="nombre">
-                <a class="hijo">BRASIL</a>
+        <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('brasil')">
+            <div class="overlayInfo">
+                <div class="nombre" (click)="topSong('BR')">
+                    <a class="hijo">BRASIL</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('colombia')">
-        <div class="overlayInfo">
-            <div class="nombre">
-                <a class="hijo">COLOMBIA</a>
+        <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('colombia')">
+            <div class="overlayInfo" (click)="topSong('CO')">
+                <div class="nombre">
+                    <a class="hijo">COLOMBIA</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('eeuu')">
-        <div class="overlayInfo">
-            <div class="nombre">
-                <a class="hijo">ESTADOS UNIDOS</a>
+        <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('eeuu')">
+            <div class="overlayInfo" (click)="topSong('US')">
+                <div class="nombre">
+                    <a class="hijo">ESTADOS UNIDOS</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('espana')">
-        <div class="overlayInfo">
-            <div class="nombre">
-                <a class="hijo">ESPAÑA</a>
+        <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('espana')">
+            <div class="overlayInfo" (click)="topSong('ES')">
+                <div class="nombre">
+                    <a class="hijo">ESPAÑA</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('francia')">
-        <div class="overlayInfo">
-            <div class="nombre">
-                <a class="hijo">FRANCIA</a>
+        <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('francia')">
+            <div class="overlayInfo" (click)="topSong('FR')">
+                <div class="nombre">
+                    <a class="hijo">FRANCIA</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('grecia')">
-        <div class="overlayInfo">
-            <div class="nombre">
-                <a class="hijo">GRECIA</a>
+        <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('grecia')">
+            <div class="overlayInfo" (click)="topSong('GR')">
+                <div class="nombre">
+                    <a class="hijo">GRECIA</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('holanda')">
-        <div class="overlayInfo">
-            <div class="nombre">
-                <a class="hijo">HOLANDA</a>
+        <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('holanda')">
+            <div class="overlayInfo" (click)="topSong('NL')">
+                <div class="nombre">
+                    <a class="hijo">HOLANDA</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('italia')">
-        <div class="overlayInfo">
-            <div class="nombre">
-                <a class="hijo">ITALIA</a>
+        <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('italia')">
+            <div class="overlayInfo" (click)="topSong('IT')">
+                <div class="nombre">
+                    <a class="hijo">ITALIA</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('mexico')">
-        <div class="overlayInfo">
-            <div class="nombre">
-                <a class="hijo">MEXICO</a>
+        <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('mexico')">
+            <div class="overlayInfo" (click)="topSong('MX')">
+                <div class="nombre">
+                    <a class="hijo">MEXICO</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('portugal')">
-        <div class="overlayInfo">
-            <div class="nombre">
-                <a class="hijo">PORTUGAL</a>
+        <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('portugal')">
+            <div class="overlayInfo" (click)="topSong('PT')">
+                <div class="nombre">
+                    <a class="hijo">PORTUGAL</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('reino_unido')">
-        <div class="overlayInfo">
-            <div class="nombre">
-                <a class="hijo">REINO UNIDO</a>
+        <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('reino_unido')">
+            <div class="overlayInfo" (click)="topSong('GB')">
+                <div class="nombre">
+                    <a class="hijo">REINO UNIDO</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('suecia')">
-        <div class="overlayInfo">
-            <div class="nombre">
-                <a class="hijo">SUECIA</a>
+        <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('suecia')">
+            <div class="overlayInfo" (click)="topSong('SE')">
+                <div class="nombre">
+                    <a class="hijo">SUECIA</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('suiza')">
-        <div class="overlayInfo">
-            <div class="nombre">
-                <a class="hijo">SUIZA</a>
+        <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('suiza')">
+            <div class="overlayInfo" (click)="topSong('CH')">
+                <div class="nombre">
+                    <a class="hijo">SUIZA</a>
+                </div>
             </div>
         </div>
     </div>
@@ -115,12 +117,12 @@
 
 <div>
     <jhi-alert-error></jhi-alert-error>
-        <div class="fondo">
+    <div class="fondo" [ngStyle]="{'display':displayMain}">
         <!-- Page Content Holder -->
-            <div class="row">
+        <div class="row">
                 <div class="col-sm-12 buscador">
                     <br>
-
+                    <button (click)="changeCountry()">Cambiar Pais</button>
                     <input type="text"  id="buscador" (keyup.enter)="searchSong()" [(ngModel)]="search" placeholder="Buscar artista o canción">
                     <button class="btn-primary" id="b"  (click)="searchSong()"><span class="glyphicon glyphicon-search"></span></button>
 
