--- a/src/main/webapp/app/account/password-reset/init/password-reset-init.css
+++ b/src/main/webapp/app/account/password-reset/init/password-reset-init.css
@@ -1,9 +1,12 @@
 .boton2{
     color:white!important;
     background-color: green!important;
-    margin-left: 55%!important;
+    margin-left: 44%!important;
 }
 
+.form-control{
+    width: 85%!important;
+}
 button:hover {
     -webkit-box-shadow: 0px 0px 51px 4px rgba(255, 255, 255, 1);
     -moz-box-shadow: 0px 0px 51px 4px rgba(255, 255, 255, 1);
@@ -38,7 +41,7 @@ label{
 
 h1{
     color:white!important;
-    margin-left:44%!important;
+    margin-left:33%!important;
 
 
 }
@@ -52,6 +55,10 @@ h1{
     .form-control{
         margin-left: 50px!important;
         width: 102%!important;
+    }
+    .boton2{
+        margin-left: 46%!important;
+
     }
 
 }
@@ -70,6 +77,13 @@ h1{
 
     .form-control{
         margin-left: 129px!important;
-        width: 82%!important;
+        width: 81%!important;
+    }
+    .boton2{
+        margin-left: 49%!important;
+
+    }
+    h1{
+        margin-left: 37%!important;
     }
 }
