--- a/src/main/webapp/app/pages/pageartist/pages.css
+++ b/src/main/webapp/app/pages/pageartist/pages.css
@@ -15,8 +15,9 @@
 
 h1{
     color:white!important;
-    font-size: 2em!important;
+    font-size: 2.5em!important;
     display:inline-block!important;
+    margin-left: -10%;
 }
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
     color: grey;
