--- a/src/main/webapp/app/pages/pagehome/phome.css
+++ b/src/main/webapp/app/pages/pagehome/phome.css
@@ -11,44 +11,72 @@
 
 }
 
+.fa fa-globe{
+    background-color: black!important;
+}
+.col-sm-12{
+    margin-bottom: 20px!important;
+}
 .row{
     width: 93%!important;
     margin-left: 5%!important;
 }
 h1{
     color:white!important;
+    font-size: 2.5em!important;
 }
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
     color: grey;
     font-style: italic;
+    font-size: 15px;
 }
 ::-moz-placeholder { /* Firefox 19+ */
     color: grey;
     font-style: italic;
+    font-size: 15px;
 }
 :-ms-input-placeholder { /* IE 10+ */
     color: grey;
     font-style: italic;
+    font-size: 15px;
 }
 :-moz-placeholder { /* Firefox 18- */
     color: grey;
     font-style: italic;
+    font-size: 15px;
 }
 #buscador {
     background: url(https://cdn0.iconfinder.com/data/icons/slim-square-icons-basics/100/basics-19-32.png) no-repeat 0px 5px;
     background-size: 24px;
-    width: 500px;
+    width: 54%!important;
     border: transparent;
     border-bottom: solid 1px #ccc;
     outline: none;
     color:white!important;
-    margin-left: 27%!important;
+    margin-left: 22%!important;
 
 
 }
+
+#mundo{
+    background-color: black!important;
+    color: white!important;
+    border-color: black!important;
+
+}
+
+#mundo:hover{
+    -webkit-box-shadow: 0px 0px 0px 0px;
+    cursor:pointer;
+}
+
+.fa fa-globe{
+    height:100px!important;
+    width:100px!important;
+}
 #b{
     background-color: black!important;
-    border-color: white!important;
+    border-colxor: white!important;
 }
 
 .paises {
@@ -108,7 +136,7 @@ h1{
     width: 65px;
     height: 65px;
     float: left;
-    margin-left: 32%;
+    margin-left: 34%;
     display: inline-block;
     margin-top: 15%;
 }
@@ -210,6 +238,9 @@ a, a:hover, a:focus {
     border: none;
 }
 
+.btn-primary{
+    border-color: white!important;
+}
 .line {
     width: 100%;
     height: 1px;
