--- a/src/main/webapp/app/pages/pagehome/phome.component.html
+++ b/src/main/webapp/app/pages/pagehome/phome.component.html
@@ -125,7 +125,16 @@
 
                     <input type="text"  id="buscador" (keyup.enter)="searchSong()" [(ngModel)]="search" placeholder="Buscar artista o canción">
                     <button class="btn-primary" id="b"  (click)="searchSong()"><span class="glyphicon glyphicon-search"></span></button>
-                    <button class="fa fa-globe fa-lg" id="mundo"(click)="changeCountry()"></button>
+                    <ul class="hList">
+                        <li>
+                            <a href="#click" class="menu">
+                                <h2 class="menu-title">OPCIONES</h2>
+                                <ul class="menu-dropdown">
+                                    <li><button id="mundo"(click)="changeCountry()">Cambiar País</button></li>
+                                    <li>Ver más</li>
+                                    <li>Manzano</li>
+                                </ul>
+                    <!--<button class="fa fa-globe fa-lg" id="mundo"(click)="changeCountry()"></button>-->
 
                 </div><br><br>
             <!--
