--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -318,7 +318,7 @@
             <ul>
                 <li class="fh5co">
                     <a routerLink="pagehome-phome" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
-                        <i class="fa fa-star-half-full" aria-hidden="true"></i>&nbsp;
+                        <i class="fa fa-heart" aria-hidden="true"></i>&nbsp;
                         <span jhiTranslate="global.menu.pagehome-phome">Tendencias</span>
                     </a>
                 </li>
@@ -336,8 +336,8 @@
                 </li>
                 <li class="fh5co">
                     <a routerLink="pageconciertos-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
-                        <i class="fa fa-star-half-full" aria-hidden="true"></i>&nbsp;
-                        <span jhiTranslate="global.menu.pageconciertos-pages">Concert</span>
+                        <i class="fa fa-cog" aria-hidden="true"></i>&nbsp;
+                        <span>AJUSTES</span>
                     </a>
                 </li>
 
@@ -348,7 +348,7 @@
             </ul>
         </nav>
         <div class="fh5co-footer">
-            <p><small>&copy; 2018 <b>PuigTheSong.</b> All Rights Reserved.</span> <span>Designed by <a href="" target="_blank">Julio/Borja/Bryan/Javier<br>Llauna</a></span></p>
+            <p style="color:black!important; margin-top: 281px!important;"><small>&copy; 2018 <b style="color:white!important">PuigTheSong.<br></b> All Rights Reserved.<br></span><span style="color:black!important;">Designed by <a href="" target="_blank" style="color:white!important;">Julio/Borja/Bryan/Javier<br>Llauna</a></span>
             <ul>
                 <li><a href="#"><i class="icon-facebook2"></i></a></li>
                 <li><a href="#"><i class="icon-twitter2"></i></a></li>
