--- a/src/main/webapp/app/pages/pageconciertos/pages.component.html
+++ b/src/main/webapp/app/pages/pageconciertos/pages.component.html
@@ -1,9 +1,8 @@
 <div>
     <div class="fondo">
-        <br>
-        <h2 style="text-align: center"><span data-translate="rockbible3App.pageconciertos.pages.title">Mis Conciertos</span></h2>
-        <br>
-        <jhi-alert-error></jhi-alert-error>
+        <div class="row">
+            <div class="col-md-12" style="text-align: center"><h1><i class="fa fa-cog"></i> Mis Ajustes</h1></div>
+        </div>
     </div>
     <div id="fh5co-main">
         <div class="container-fluid">
