--- a/src/main/webapp/app/account/register/register.css
+++ b/src/main/webapp/app/account/register/register.css
@@ -1,3 +1,7 @@
+@import url(https://fonts.googleapis.com/css?family=Titan+One);
+@import url(http://weloveiconfonts.com/api/?family=fontawesome);
+@import url(https://meyerweb.com/eric/tools/css/reset/reset.css);
+
 .boton2{
     color:white!important;
     background-color: green!important;
@@ -11,6 +15,7 @@ span{
 label{
     color:white!important;
 }
+
 
 .text-danger{
     font-size: 14px!important;
@@ -42,6 +47,9 @@ button:hover{
 
 @media only screen and (max-width: 600px) {
 
+    form{
+        margin-left: 24%!important;
+    }
     .boton2{
         margin-left: 41%!important;
     }
@@ -59,6 +67,9 @@ button:hover{
 
 @media only screen and (max-width: 700px) {
 
+    form{
+        margin-left: 24%!important;
+    }
     .boton2{
         margin-left: 41%!important;
     }
@@ -72,4 +83,138 @@ button:hover{
     h1{
         margin-left: 40%!important;
     }
+}
+
+
+
+
+body {
+    background: #1b1e24;
+    background-image:-webkit-linear-gradient(right,#1b1e24,#1b1e24 50%,#1b1e24);
+    background-image:-moz-linear-gradient(right,#1b1e24,#1b1e24 50%,#1b1e24);
+    background-image:-o-linear-gradient(right,#1b1e24,#1b1e24 50%,#1b1e24);
+    background-image:-ms-linear-gradient(right,#1b1e24,#1b1e24 50%,#1b1e24);
+    background-image:linear-gradient(to left,#1b1e24,#1b1e24 50%,#1b1e24);
+    text-align: center;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.5em;
+}
+
+[class*="fontawesome-"]:before {
+    font-family: 'FontAwesome', sans-serif;
+}
+
+input {
+    font-size: 1em;
+    line-height: 1.5em;
+    margin: 0;
+    padding: 0;
+    -webkit-appearance: none;
+}
+
+.Registro {
+    margin: 18px auto;
+    width: 304px;
+    margin-left: 26px!important;
+    color: black;
+    border-color: #d6cece!important;
+    border-radius: 15px!important;
+}
+
+.Registro span {
+    color: hsl(5, 50%, 57%);
+    display: block;
+    height: 48px;
+    line-height: 48px;
+    position: absolute;
+    text-align: center;
+    width: 36px;
+}
+
+.Registro input {
+    border: none;
+    height: 48px;
+    outline: none;
+}
+
+.Registro input[type="text"] {
+     background-color: #fff;
+     border-top: 2px solid #d6cece!important;
+     border-right: 1px solid #000;
+     border-left: 1px solid #000;
+     border-radius: 5px 5px 0 0;
+     -moz-border-radius: 5px 5px 0 0;
+     -webkit-border-radius: 5px 5px 0 0;
+     -o-border-radius: 5px 5px 0 0;
+     -ms-border-radius: 5px 5px 0 0;
+     color: #363636;
+     width: 304px;
+ }
+
+.Registro input[type="email"] {
+    background-color: #fff;
+    border-top: 2px solid #d6cece!important;
+    border-right: 1px solid #000;
+    border-left: 1px solid #000;
+    border-radius: 5px 5px 0 0;
+    -moz-border-radius: 5px 5px 0 0;
+    -webkit-border-radius: 5px 5px 0 0;
+    -o-border-radius: 5px 5px 0 0;
+    -ms-border-radius: 5px 5px 0 0;
+    color: #363636;
+    width: 304px;
+}
+
+.Registro input[type="password"] {
+    background-color: #fff;
+    border-top: 2px solid #d6cece!important;
+    border-right: 1px solid #000;
+    border-bottom: 2px solid #d6cece!important;
+    border-left: 1px solid #000;
+    border-radius: 0 0 5px 5px;
+    -moz-border-radius: 0 0 5px 5px;
+    -webkit-border-radius: 0 0 5px 5px;
+    -o-border-radius: 0 0 5px 5px;
+    -ms-border-radius: 0 0 5px 5px;
+    color: #363636;
+    margin-bottom: 20px;
+    width: 304px;
+}
+
+.Registro input[type="submit"] {
+    background-color: #d6cece!important;
+    border: 1px solid #d6cece!important;
+    border-radius: 15px;
+    -moz-border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    color: #fff;
+    font-weight: bold;
+    line-height: 48px;
+    text-align: center;
+    text-transform: uppercase;
+    width: 240px;
+}
+
+.Registro input[type="submit"]:hover {
+    background-color: #d6cece!important;
+    box-shadow: 2px 2px 20px  #d6cece, #fff 0 -1px 2px;
+}
+
+form{
+    margin-left: 50px!important;
+}
+.texto {
+    color: #ea4d4d!important;
+    font-size: 40px;
+    margin: 2% auto;
+    text-align: center;
+    text-shadow: 1px 2px 1px  rgba(0,0,0,.5);
+    padding-top: 40px;
+}
+
+p:hover {
+    text-shadow: 2px 2px 20px  #2c90c6, #fff 0 -1px 2px;
 }
