--- a/src/main/webapp/app/pages/pagehome/phome.component.html
+++ b/src/main/webapp/app/pages/pagehome/phome.component.html
@@ -17,7 +17,7 @@
         <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('belgica')">
             <div class="overlayInfo" (click)="topSong('BE')">
                 <div class="nombre">
-                    <a class="hijo">BELGICA</a>
+                    <a class="hijo">BÉLGICA</a>
                 </div>
             </div>
         </div>
@@ -80,7 +80,7 @@
         <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('mexico')">
             <div class="overlayInfo" (click)="topSong('MX')">
                 <div class="nombre">
-                    <a class="hijo">MEXICO</a>
+                    <a class="hijo">MÉXICO</a>
                 </div>
             </div>
         </div>
@@ -125,16 +125,6 @@
 
                     <input type="text"  id="buscador" (keyup.enter)="searchSong()" [(ngModel)]="search" placeholder="Buscar artista o canción">
                     <button class="btn-primary" id="b"  (click)="searchSong()"><span class="glyphicon glyphicon-search"></span></button>
-                    <ul class="hList">
-                        <li>
-                            <a href="#click" class="menu">
-                                <h2 class="menu-title">OPCIONES</h2>
-                                <ul class="menu-dropdown">
-                                    <li><button id="mundo"(click)="changeCountry()">Cambiar País</button></li>
-                                    <li>Ver más</li>
-                                    <li>Manzano</li>
-                                </ul>
-                    <!--<button class="fa fa-globe fa-lg" id="mundo"(click)="changeCountry()"></button>-->
 
                 </div><br><br>
             <!--
@@ -142,7 +132,7 @@
                 <div class="col-lg-10" style="text-align: center"><h1 [ngStyle]="{'display':displayMain}"><span class="glyphicon glyphicon-search"></span> Búsquedas</h1></div>
                 </div>-->
                 <div class="row">
-                    <div *ngFor="let search of DataSearch" class="infoDiv col-lg-3 col-md-4 col-sm-6">
+                    <div *ngFor="let search of DataSearch" class="infoDiv col-lg-3 col-md-4 col-sm-6 cols-xs-8">
                         <div class="cover" [style.background-image]="sanitizeImage(search.albumId)">
                             <div class="overlayInfo">
                                 <div>
@@ -162,7 +152,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-sm-12 col-lg-12" style="text-align: center"><h1><span class="glyphicon glyphicon-music"></span> Top Canciones</h1></div>
+                    <div class="col-sm-12 col-lg-12" style="text-align: center"> <button class="fa fa-globe fa-lg" id="mundo"(click)="changeCountry()"></button><h1><span class="glyphicon glyphicon-music"></span> Top Canciones</h1></div>
                 </div>
                 <div class="row">
                     <div *ngFor="let data of DataTopTracks" class="infoDiv col-lg-3 col-md-4 col-sm-6 image-top">
@@ -180,7 +170,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p class="tituloSong" style="text-align: center; color: white">{{data.name}}</p>
+                        <p class="tituloSong" style="text-align: center; color: black">{{data.name}}</p>
                     </div>
                     <div class="backdrop" [ngStyle]="{'display':display}"></div>
                     <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':display,'width':560}">
@@ -200,9 +190,17 @@
                     <br>
                     <br>
                 </div>
+            <div class="row">
+
+                <div class="col-sm-12 col-lg-12" style="text-align: center">  <button class="fa fa-plus fa-lg" id="mas"(click)="changeCountry()"> Ver más</button></div>
+            </div>
                 <div class="row">
                     <div class="col-md-12" style="text-align: center"><h1><span class="glyphicon glyphicon-star"></span> Top Artistas</h1></div>
-                </div>
+                </div><br>
+                <div class="row">
+
+                    <div class="col-sm-12 col-lg-12" style="text-align: center">  <button class="fa fa-plus fa-lg" id="mas"(click)="changeCountry()"> Ver más</button>
+                    </div>
             </div>
         </div>
 </div>
