--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -319,13 +319,13 @@
                 <li class="fh5co">
                     <a routerLink="pagehome-phome" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                         <i class="fa fa-heart" aria-hidden="true"></i>&nbsp;
-                        <span jhiTranslate="global.menu.pagehome-phome">Tendencias</span>
+                        <span>Tendencias</span>
                     </a>
                 </li>
                 <li class="fh5co">
                     <a routerLink="pageartist-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                         <i class="fa fa-music" aria-hidden="true"></i>&nbsp;
-                        <span>SONG</span>
+                        <span>CANCIONES</span>
                     </a>
                 </li>
                 <li class="fh5co">
@@ -335,13 +335,13 @@
                     </a>
                 </li>
                 <li class="fh5co">
-                    <a routerLink="pageconciertos-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                    <a routerLink="settings" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                         <i class="fa fa-cog" aria-hidden="true"></i>&nbsp;
                         <span>AJUSTES</span>
                     </a>
                 </li>
 
-                <li class="fh5co"><a (click)="login()" id="login"><i class="fa fa-user-circle" aria-hidden="true"></i> <span> Sign in </span></a>
+                <li class="fh5co"><a (click)="login()" id="login"><i class="fa fa-user-circle" aria-hidden="true"></i> <span> ACCEDE </span></a>
 
                 </li>
 
