--- a/src/main/webapp/app/account/password-reset/init/password-reset-init.css
+++ b/src/main/webapp/app/account/password-reset/init/password-reset-init.css
@@ -1,7 +1,7 @@
 .boton2{
     color:white!important;
     background-color: green!important;
-    margin-left: 44%!important;
+    margin-left: 43%!important;
 }
 
 .form-control{
@@ -35,7 +35,7 @@ label{
     font-family: "Comic Sans MS", cursive, sans-serif;
     font-style: italic!important;
     font-size: 14px!important;
-    margin-left:16%!important;
+    margin-left: 10%!important;
     width: 86%!important;
 }
 
@@ -46,8 +46,8 @@ h1{
 
 }
 
-#fondob{
-    background-color: black!important;
+#fondo{
+    background-color: #d6cece!important;
 }
 
 
