--- a/src/main/webapp/app/account/settings/settings.component.html
+++ b/src/main/webapp/app/account/settings/settings.component.html
@@ -1,4 +1,9 @@
 <div>
+    <div class="fondo">
+    <div class="row">
+        <div class="col-md-12" style="text-align: center"><h1><i class="fa fa-cog"></i> Mis Ajustes</h1></div>
+    </div>
+</div>
     <div class="row justify-content-center">
         <div class="col-md-8">
             <div class="alert alert-success" *ngIf="success" jhiTranslate="settings.messages.success">
