--- a/src/main/webapp/app/pages/pageartist/pages.css
+++ b/src/main/webapp/app/pages/pageartist/pages.css
@@ -62,6 +62,12 @@ h1{
     font-size: 20px;
     position: relative;
     text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: #999;
+    margin-left: -48px!important;
 }
 .overlayInfo {
     position: absolute;
