--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -348,7 +348,7 @@
             </ul>
         </nav>
         <div class="fh5co-footer">
-            <p style="color:black!important; margin-top: 281px!important;"><small>&copy; 2018 <b style="color:white!important">PuigTheSong.<br></b> All Rights Reserved.<br></span><span style="color:black!important;">Designed by <a href="" target="_blank" style="color:white!important;">Julio/Borja/Bryan/Javier<br>Llauna</a></span>
+            <p style="color:black!important;margin-top: 281px!important;"><small>&copy; 2018 <b style="color:white!important">PuigTheSong.<br></b> All Rights Reserved.<br><p style="color:black!important;">Designed by <a href="" target="_blank" style="color:white!important;"><br>Julio/Borja/Bryan/Javier<br>Llauna</a></p>
             <ul>
                 <li><a href="#"><i class="icon-facebook2"></i></a></li>
                 <li><a href="#"><i class="icon-twitter2"></i></a></li>
