--- a/src/main/webapp/app/layouts/navbar/navbar.css
+++ b/src/main/webapp/app/layouts/navbar/navbar.css
@@ -23,7 +23,18 @@
 }
 @media screen and (max-width: 1200px) {
     #fh5co-aside {
-        width: 13%;
+        width: 12%;
+    }
+    span{
+        font-size: 16px!important;
+    }
+}
+
+@media screen and (max-width: 900px) {
+
+    span{
+        font-size: 13px!important;
+
     }
 }
 @media screen and (max-width: 768px) {
@@ -94,7 +105,7 @@
     margin-bottom: 2em;
     margin-left: 1px;
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 18px;
 }
 @media screen and (max-width: 768px) {
     #fh5co-aside #fh5co-logo {
