--- a/src/main/webapp/app/pages/pagehome/phome.css
+++ b/src/main/webapp/app/pages/pagehome/phome.css
@@ -161,6 +161,7 @@ h1{
     background-color: red;
     border-color: white;
     border-radius: 4px;
+    cursor: pointer;
 }
 .botonyoutube:hover{
     background-color: white;
@@ -168,14 +169,13 @@ h1{
     cursor: pointer;
     color:red;
     border-radius: 4px;
-}
-
-button:hover{
     -webkit-box-shadow: 0px 0px 51px 4px rgb(255, 61, 112);
     -moz-box-shadow: 0px 0px 51px 4px rgb(255, 0, 10);
     box-shadow: 0px 0px 30px 4px rgb(255, 0, 10);
     cursor:pointer;
 }
+
+
 
 
 .boton2{
